@@ -16,7 +16,7 @@ if _sys.version_info[0:2] < (2, 4):
     raise RuntimeError('Python 2.4.x or higher is required!')
 
 from netaddr.core import (AddrConversionError, AddrFormatError,
-    NotRegisteredError, ZEROFILL, Z, INET_ATON, INET_PTON, P, NOHOST, N)
+    NotRegisteredError, ZEROFILL, Z, INET_ATON, INET_PTON, INET_PTON_STRICT, P, NOHOST, N)
 
 from netaddr.ip import (IPAddress, IPNetwork, IPRange, all_matching_cidrs,
     cidr_abbrev_to_verbose, cidr_exclude, cidr_merge, iprange_to_cidrs,
